--- a/nim/build.gradle
+++ b/nim/build.gradle
@@ -27,7 +27,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:recyclerview-v7:26.1.0'
-    implementation 'com.github.bumptech.glide:glide:4.2.0'
+    implementation("com.github.bumptech.glide:glide:4.5.0") {
+        exclude group: "com.android.support"
+    }
+    implementation "com.android.support:support-fragment:26.1.0"
     implementation project(':standard')
     //网易云信
     // 基础功能 (必需)
