实现p2p小时收发

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,13 +62,16 @@
         <activity
             android:name=".activity.MainActivity"
             android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.P2PChatActivity"
+            android:screenOrientation="portrait" />
 
         <!--网易云信start-->
         <!-- APP key, 可以在这里设置，也可以在 SDKOptions 中提供。
                  如果 SDKOptions 中提供了，取 SDKOptions 中的值。 -->
         <!--<meta-data-->
-            <!--android:name="com.netease.nim.appKey"-->
-            <!--android:value="key_of_your_app" />-->
+        <!--android:name="com.netease.nim.appKey"-->
+        <!--android:value="key_of_your_app" />-->
 
         <!-- 云信后台服务，请使用独立进程。 -->
         <service
