--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation project(':standard')
     implementation project(':nim')
+    implementation project(':easemob')
 }
