--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation project(':standard')
-    implementation project(':nim')
-    implementation project(':easemob')
+    implementation project(':im-netease')
+    implementation project(':im-hyphenate')
 }
