ui层拆分，方便后期扩展其他UI

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':standard', ':im-netease', ':im-hyphenate'
+include ':app', ':easyIM', ':im-netease', ':im-hyphenate', ':ui-demo', ':ui-base'
