--- a/easyIM/build.gradle
+++ b/easyIM/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation project(':ui-base')
 }
