--- a/im-hyphenate/build.gradle
+++ b/im-hyphenate/build.gradle
@@ -33,7 +33,7 @@ dependencies {
         exclude group: "com.android.support"
     }
     implementation "com.android.support:support-fragment:26.1.0"
-    implementation project(':standard')
+    implementation project(':easyIM')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.hyphenate:hyphenate-sdk:3.3.0'
 }
