--- a/im-netease/build.gradle
+++ b/im-netease/build.gradle
@@ -25,7 +25,7 @@ dependencies {
         exclude group: "com.android.support"
     }
     implementation "com.android.support:support-fragment:26.1.0"
-    implementation project(':standard')
+    implementation project(':easyIM')
     //网易云信
     // 基础功能 (必需)
     compile 'com.netease.nimlib:basesdk:4.4.0'
