--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,5 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation project(':easyIM')
     implementation project(':im-netease')
-    implementation project(':ui-demo')
+    implementation project(':ui-wechat')
 }
