--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-
+apply from: "http://116.62.124.154:8081/leixiaowu/dependence-config/raw/master/config.gradle"
 buildscript {
-    
+
     repositories {
-        google()
-        jcenter()
+        maven { url "http://192.168.0.249:8081/nexus/content/repositories/android" }
+        maven { url "https://maven.aliyun.com/repository/central" }
+        maven { url "https://maven.aliyun.com/repository/google" }
+        maven { url "https://maven.aliyun.com/repository/jcenter" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-        
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -17,11 +18,24 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        jcenter()
+        maven { url "http://192.168.0.249:8081/nexus/content/repositories/android" }
+        maven { url "https://maven.aliyun.com/repository/central" }
+        maven { url "https://maven.aliyun.com/repository/google" }
+        maven { url "https://maven.aliyun.com/repository/jcenter" }
     }
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    compileSdkVersion = 28
+    minSdkVersion = 14
+    targetSdkVersion = 28
+    versionCode = 1
+    versionName = "1.0"
+
+    supportVersion = '28.0.0'
+    appcompat_v7 = 'com.android.support:appcompat-v7:28.0.0'
 }
