--- a/build.gradle
+++ b/build.gradle
@@ -38,4 +38,6 @@ ext {
 
     supportVersion = '28.0.0'
     appcompat_v7 = 'com.android.support:appcompat-v7:28.0.0'
+    support_v4 = 'com.android.support:support-v4:28.0.0'
+    recyclerview_v7 = 'com.android.support:recyclerview-v7:28.0.0'
 }
