--- a/build.gradle
+++ b/build.gradle
@@ -41,4 +41,9 @@ ext {
     appcompat_v7 = 'com.android.support:appcompat-v7:28.0.0'
     support_v4 = 'com.android.support:support-v4:28.0.0'
     recyclerview_v7 = 'com.android.support:recyclerview-v7:28.0.0'
+    circle_image_view = 'de.hdodenhof:circleimageview:2.2.0'
+    easy_swipe_menu_layout = 'com.github.anzaizai:EasySwipeMenuLayout:1.1.2'
+    and_permission =  'com.yanzhenjie:permission:2.0.0-rc12'
+    glide = 'com.github.bumptech.glide:glide:4.5.0'
+    luban = 'top.zibin:Luban:1.1.8'
 }
