--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.appcompat_v7
-    implementation rootProject.ext.easyim["im-netease"]
-    implementation rootProject.ext.easyim["ui-ysy"]
+//    implementation rootProject.ext.easyim["im-netease"]
+    implementation project(":im-netease")
+//    implementation rootProject.ext.easyim["ui-ysy"]
+    implementation project(":ui-ysy")
 }
