[dev]华为推送配置

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
 //    implementation rootProject.ext.easyim["ui-ysy"]
     implementation project(":ui-ysy")
     implementation project(":push-mi")
+    implementation project(":push-huawei")
 }
