--- a/build.gradle
+++ b/build.gradle
@@ -36,16 +36,16 @@ ext {
     minSdkVersion = 14
     targetSdkVersion = 28
     versionCode = 1
-    versionName = "1.0.3"
+    versionName = "1.0.4"
 
     supportVersion = "28.0.0"
     appcompat_v7 = "com.android.support:appcompat-v7:28.0.0"
     support_v4 = "com.android.support:support-v4:28.0.0"
     recyclerview_v7 = "com.android.support:recyclerview-v7:28.0.0"
-    circle_image_view = "de.hdodenhof:circleimageview:2.2.0"
+    round_image_view = "com.makeramen:roundedimageview:2.3.0"
     easy_swipe_menu_layout = "com.github.anzaizai:EasySwipeMenuLayout:1.1.2"
     and_permission = "com.yanzhenjie:permission:2.0.0-rc12"
-    glide = "com.github.bumptech.glide:glide:4.5.0"
+    glide = "com.github.bumptech.glide:glide:4.9.0"
     luban = "top.zibin:Luban:1.1.8"
     matisse = "com.zhihu.android:matisse:0.5.1"
 
