--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,12 +37,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.appcompat_v7
-    implementation rootProject.ext.easyim["im-netease"]
-//    implementation project(":im-netease")
-    implementation rootProject.ext.easyim["ui-ysy"]
-//    implementation project(":ui-ysy")
-    implementation rootProject.ext.easyim["push-mi"]
-//    implementation project(":push-mi")
-    implementation rootProject.ext.easyim["push-huawei"]
-//    implementation project(":push-huawei")
+//    implementation rootProject.ext.easyim["im-netease"]
+    implementation project(":im-netease")
+//    implementation rootProject.ext.easyim["ui-ysy"]
+    implementation project(":ui-ysy")
+//    implementation rootProject.ext.easyim["push-mi"]
+    implementation project(":push-mi")
+//    implementation rootProject.ext.easyim["push-huawei"]
+    implementation project(":push-huawei")
 }
