--- a/build.gradle
+++ b/build.gradle
@@ -32,12 +32,12 @@ task clean(type: Delete) {
 }
 
 ext {
-    dev = true
+    dev = false
     compileSdkVersion = 28
     minSdkVersion = 14
     targetSdkVersion = 28
     versionCode = 1
-    versionName = "1.1.1"
+    versionName = "1.1.2"
 
     supportVersion = "28.0.0"
     appcompat_v7 = "com.android.support:appcompat-v7:28.0.0"
